# passcalc

./: CMakeLists.txt  LICENSE  docs.tex  index.html  light.html  startindocker.sh
cmdline/: main.cpp
